# Guess-The-Emotion

./: CMakeLists.txt  README.md  gestures.cpp  gestures.h  guesstheemotion.cpp  guesstheemotion.h  main.cpp
